fix overflow-x

--- a/app/styles/custom/dashhead.less
+++ b/app/styles/custom/dashhead.less
@@ -1,6 +1,6 @@
 .dashhead.dashhead-solid {
-  padding: 0px 15px;
-  margin: -20px -15px 0 -15px;
+  padding: 0 15px;
+  margin: -20px -5px 0 -15px;
   background-color: rgb(229, 245, 246);
   h3 {
     font-size: 18px;
@@ -13,9 +13,9 @@
 
 .task-detail {
   border: 1px solid #ccc;
-  margin: 10px 0px;
+  margin: 10px 0;
   padding: 10px;
 }
 @media (max-width: 768px){
-.iconav {margin:0px;padding:0px;}
+.iconav {margin:0;padding:0;}
 }
